[project]
name = "comfyui-connect-from-afar"
description = "Connect a new link from out of screen."
version = "1.0.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/shinich39/comfyui-connect-from-afar"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "shinich39"
DisplayName = "comfyui-connect-from-afar"
Icon = ""
